added list of receiver emails, fixed transaction response
